# grvc-ual

./: .gitignore  README.md  annotated.html  backend_8h_source.html  backend__dummy_8h_source.html  backend__light_8h_source.html  backend__mavros_8h_source.html  classes.html  classgrvc_1_1ual_1_1_backend-members.html  classgrvc_1_1ual_1_1_backend.html  classgrvc_1_1ual_1_1_backend__inherit__graph.map  classgrvc_1_1ual_1_1_backend__inherit__graph.md5  classgrvc_1_1ual_1_1_backend_dummy-members.html  classgrvc_1_1ual_1_1_backend_dummy.html  classgrvc_1_1ual_1_1_backend_dummy__inherit__graph.map  classgrvc_1_1ual_1_1_backend_dummy__inherit__graph.md5  classgrvc_1_1ual_1_1_backend_light-members.html  classgrvc_1_1ual_1_1_backend_light.html  classgrvc_1_1ual_1_1_backend_light__coll__graph.map  classgrvc_1_1ual_1_1_backend_light__inherit__graph.md5  classgrvc_1_1ual_1_1_backend_mavros-members.html  classgrvc_1_1ual_1_1_backend_mavros.html  classgrvc_1_1ual_1_1_backend_mavros__coll__graph.map  classgrvc_1_1ual_1_1_backend_mavros__coll__graph.md5  classgrvc_1_1ual_1_1_history_buffer-members.html  classgrvc_1_1ual_1_1_history_buffer.html  classgrvc_1_1ual_1_1_u_a_l-members.html  classgrvc_1_1ual_1_1_u_a_l.html  classgrvc_1_1ual_1_1_u_a_l__coll__graph.map  classgrvc_1_1ual_1_1_u_a_l__coll__graph.md5  configure.py  dir_38813556b2bd05bde43c672b3ffede4e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  geographic__to__cartesian_8h_source.html  graph_legend.html  (+10 more)
px4_bringup/: CMakeLists.txt  README.md  package.xml
px4_bringup/config/: aeroarms.world  aeroarms.xml  empty_light.world  map_simulation.xml  px4_config.yaml  px4_pluginlists.yaml  simulation_params.yaml
px4_bringup/launch/: simulate.launch  spawn_robot.launch  spawn_robot_JA.launch  test_simulate.launch
px4_bringup/scripts/: gazebo_spawn.py  launch_gzworld.py  launch_gzworld_JA.py  run_mavros.py  run_px4sitl.py  run_px4sitl_JA.py  setup_gazebo.bash  simulate_safety_pilot.py  spawn_gzmodel.py  spawn_gzmodel_JA.py  utils.py
robots_description/: CMakeLists.txt  package.xml
robots_description/config/: visualize.rviz
robots_description/launch/: visualize.launch
robots_description/urdf/: blender_script.py  component_snippets.xacro  multirotor_base.xacro
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  enums_0.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_2.js
static_tf_publisher/: CMakeLists.txt  package.xml
ual_backend_crazyflie/: CMakeLists.txt  package.xml
ual_backend_dji_ros/: CMakeLists.txt  package.xml
ual_backend_gazebo_light/: CMakeLists.txt  package.xml
ual_backend_mavlink/: CMakeLists.txt  package.xml
ual_backend_mavros/: CMakeLists.txt  package.xml
ual_backend_mavros_fw/: CMakeLists.txt  package.xml
ual_backend_ue/: CMakeLists.txt  package.xml
ual_examples/: CMakeLists.txt  package.xml
ual_teleop/: .gitignore  CMakeLists.txt  package.xml
uav_abstraction_layer/: CMakeLists.txt  Doxyfile.in  package.xml
uav_abstraction_layer/include/uav_abstraction_layer/: PID.h  backend.h  backend_crazyflie.h  backend_dji.h  backend_dummy.h  backend_light.h  backend_mavros.h  backend_ue.h  geographic_to_cartesian.h  posePID.h  task.h  task_board.h  task_manager.h  ual.h  ual_backend_dummy.h
uav_abstraction_layer/launch/: test_light_simulation.launch  test_server.launch  test_server_JA.launch  test_ual_ue.launch
uav_abstraction_layer/msg/: AttRateSetpoint.msg  AttSetpoint.msg  MissionElement.msg  ParamFloat.msg  State.msg  WaypointSet.msg
uav_abstraction_layer/scripts/: joy_control.py  save_waypoints.py  state_monitor.py  track_waypoints.py
uav_abstraction_layer/src/: backend.cpp  backend_crazyflie.cpp  backend_dji.cpp  backend_light.cpp  backend_mavros.cpp  backend_ue.cpp  prueba quaternion2Euler.cpp  server.cpp  test_task_management.cpp  test_task_manager.cpp  test_ual_interfaces.cpp  test_ual_object.cpp  tinyxml2.cpp  ual.cpp
uav_abstraction_layer/srv/: Float32Param.srv  GoToWaypoint.srv  GoToWaypointGeo.srv  Land.srv  SetHome.srv  SetMission.srv  SetPositionError.srv  SetVelocity.srv  TakeOff.srv
web_gcs/: CMakeLists.txt  package.xml
web_gcs/config/: rostful.cfg
web_gcs/launch/: rostful.launch
web_gcs/scripts/: run_rostful.py
web_gcs/web/: index.html  main.js  style.css
(+104 files in other folders)
